# docs/swagger/generated.gen.swagger.yml
@@ -405,6 +405,16 @@ components:
           format: string
           description: 所属3
           example: ''
+        tag_name:
+          type: array
+          description: tagの名前
+          items:
+            type: string
+        tag_color:
+          type: array
+          description: tagの色
+          items:
+            type: string
       required:
         - uuid
         - name
