# server/interfaces/handlers/community_handler.go
@@ -39,15 +39,16 @@ func (h *icommunityHandler) FindById(ctx *gin.Context) {
 
 	community, err := h.communityUsecase.FindByID(ctx, request)
 	res := gin.H{
-		"uuid":  community.UUID,
-		"name":  community.Name,
-		"email": community.Email,
-		"img":   community.Img,
-		"self":  community.Self,
-		"mem1":  community.Mem1,
-		"mem2":  community.Mem2,
-		"mem3":  community.Mem3,
-		"tags":  community.Tags,
+		"uuid":      community.UUID,
+		"name":      community.Name,
+		"email":     community.Email,
+		"img":       community.Img,
+		"self":      community.Self,
+		"mem1":      community.Mem1,
+		"mem2":      community.Mem2,
+		"mem3":      community.Mem3,
+		"tag_name":  community.TagNames,
+		"tag_color": community.TagColors,
 	}
 	if err != nil {
 		ctx.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
